# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.ja.md  README.md  justfile  renovate.json  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-15de23219bf04ed9d1a0a32cd1ba65ca86e8ae2b63e0066eabf170f231f5c181.json  query-199e230ae32afae044bc98fcc77a2111436b62b9d992de8f7ddce37541a16731.json  query-1beca6b64118c3f8d2aa28c09b4a35030a6569b7e92bae2acdca4707a5e11b44.json  query-25e7e46ff18215abe0639e05513f358c98b83dbf0856138c3642a5c0895e6561.json  query-2f979e0046cdaeed2cf0b59db4ca3a3c3be41a59ed224686d95faa1fc11ca362.json  query-512208fe21be3dd0fb5deb9d108c2f1d9ae5df5912e15622031ca96bf38562b4.json  query-589a82b1b5b3a961de851fdfd3806e53a90f3ed5867f51ee3fd4458d2e95187c.json  query-63eb1c3c588eb4bf02ad8748743d29272514217d53adaa6e56f14ee02931e9f6.json  query-7e0a8472a97ac9d29f2fa69dcda126f75d4298b9ebdd848d0231e3364d72534d.json  query-7e0fd6ce3f9d55c44555085bcdf675d491fcc35a71841c8561c74b86109b49a6.json  query-9afd8341e126c29a6566e175b081dc5cb37b470d1aa2b58fb01b4594776c59ae.json  query-9ca902d49535f92608997bd231e57d16b56a6c0bfb3da8047011abb4b5594364.json  query-b13668c77a3a1b0c2ad64f21b4d908782a1b9f67fcc7a3a819b47b19087023d3.json  query-b599fe55707c54325270d493a2b40d99473525e0ad6198c67521a39929cc31e8.json  query-b9166dc19190b1fc66ff551dd549a2871b46216d406d7200c3ec99825b047aa1.json  query-becc82e7a24f1cda64cf7ca8c2a2330c57dcf4f6a26b742e42fc1d095f4071cd.json  query-c9c5ed6318978f17f7ab92a6a449938bdc77ff5a220968b9332cc3277ef9a04b.json  query-e1a5f6acbe5ca62f80840ccc4215ced5da740f959502e71b84358f67302b787a.json  query-e2246748d87722e5258f163f92d5a5479b44f15073c35567942c8a581d9e9f7f.json  query-fe3b14bdee07bc6ca943a7b5ab96001adc591226895e0b91b4fad5bce408aeed.json
configurations/: base.toml  local.toml  production.toml
migrations/: 20230717060058_create_subscriptions_table.sql  20230801050354_add_status_to_subscriptions.sql  20230801051042_make_status_not_null_in_subscriptions.sql  20230801051755_create_subscriptions_tokens_table.sql  20230807004220_create_users_table.sql  20230807014013_rename_password_column.sql  20230807041524_remove_salt_from_users.sql  20230808082209_seed_user.sql  20230819002357_create_idempotency_table.sql  20230819064741_relax_null_checks_on_idempotency.sql  20230820030440_create_newsletter_issues_table.sql  20230822050358_create_issue_delivery_queue_table.sql  20230822231035_add_n_retries_and_retry_after_columns_to_issue_delivery_queue.sql
scripts/: ci_init_db.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  idempotency_expiring_worker.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
src/routes/newsletters/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
