[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = "4.5.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.20.2"
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14.0"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.25", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.sqlx]
default-features = false
features = [
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "runtime-tokio-rustls",
]
version = "0.7.4"


[dev-dependencies]
claims = { version = "0.7" }
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
wiremock = "0.6.0"
